# molly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.qrc
cmake/: Findlibe2fsprogs.cmake
data/: org.isoftlinux.OSProber.xml
src/: CMakeLists.txt  diskclonewidget.cpp  diskclonewidget.h  diskrestorewidget.cpp  diskrestorewidget.h  disktodiskwidget.cpp  disktodiskwidget.h  disktofilewidget.cpp  disktofilewidget.h  filetodiskwidget.cpp  filetodiskwidget.h  filetopartwidget.cpp  filetopartwidget.h  i18n.cpp  i18n.h  imgdialog.cpp  imgdialog.h  main.cpp  molly.desktop  partclonewidget.cpp  partclonewidget.h  partrestorewidget.cpp  partrestorewidget.h  parttofilewidget.cpp  parttofilewidget.h  parttopartwidget.cpp  parttopartwidget.h  restorewidget.cpp  restorewidget.h  stepwidget.cpp  stepwidget.h  templatewidget.cpp  templatewidget.h  utils.cpp  utils.h  wizardwidget.cpp  wizardwidget.h
tests/: CMakeLists.txt  README.md  test-extfs-clone.cpp  test-partclone.cpp  test-partclone.h  test-udisksclient-gui.cpp  test-udisksclient-gui.h
translations/: CMakeLists.txt  zh_CN.ts
